notification, category api auth adding